# fernet-web

./: Cargo.toml  README.md
.claude/agents/: rust-perf-engineer.md
.github/workflows/: bench.yml  lint.yml
benches/: crypto_operations.rs  end_to_end.rs  server_performance.rs
src/: lib.rs  main.rs
src/crypto/: fernet.rs  mod.rs  rsa.rs
src/error/: mod.rs
src/server/: config.rs  handlers.rs  middleware.rs  mod.rs
tests/: integration_tests.rs
