[package]
name = "fernet-web"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance Fernet web server with RSA key exchange"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/fernet-web"
readme = "README.md"
keywords = ["fernet", "encryption", "web-server", "hyper", "rust"]
categories = ["cryptography", "web-programming::http-server"]

[lib]
name = "fernet_web"
path = "src/lib.rs"

[[bin]]
name = "fernet-web"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "net", "time", "signal", "sync", "fs", "io-util"] }

# Web server framework
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"

# Basic utilities
base64 = "0.21"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Configuration
clap = { version = "4.0", features = ["derive", "env"] }

# Utilities
bytes = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.4", features = ["html_reports"] }

[features]
default = []

[profile.release]
lto = true
opt-level = 3

[[bench]]
name = "crypto_operations"
harness = false

[[bench]]
name = "server_performance"
harness = false

[[bench]]
name = "end_to_end"
harness = false